# app/swagger/Tontine.json
@@ -171,14 +171,14 @@
                 }
             }
         },
-        "admin/AcceptedTontine/{tontines}": {
+        "AcceptedTontine/{tontines}": {
             "post": {
                 "tags": [
                     "Admins"
                 ],
                 "summary": "Accepter la création d'une tontine et notifier le createur",
                 "description": "Accepter la création d'une tontine.",
-                "operationId": "05f2b0480297fb36921cb7f19b5354e7",
+                "operationId": "50f321d024a43240d56da351ad7d4bce",
                 "parameters": [
                     {
                         "name": "tontines",
@@ -237,22 +237,17 @@
                     "500": {
                         "description": "Erreur interne du serveur"
                     }
-                },
-                "security": [
-                    {
-                        "jwt_token": []
-                    }
-                ]
+                }
             }
         },
-        "admin/RefuseTontine/{tontine}": {
+        "RefuseTontine/{tontine}": {
             "post": {
                 "tags": [
                     "Admins"
                 ],
                 "summary": "Refuser la création d'une tontine et notifier le createur ",
                 "description": "Refuser la création d'une tontine.",
-                "operationId": "c0588cac9573138858b0734d55a693b2",
+                "operationId": "20bdc468a9488c768a4f11a66c4abb27",
                 "parameters": [
                     {
                         "name": "tontine",
@@ -311,22 +306,17 @@
                     "500": {
                         "description": "Erreur interne du serveur"
                     }
-                },
-                "security": [
-                    {
-                        "jwt_token": []
-                    }
-                ]
+                }
             }
         },
-        "admin/ListeTontineAccepte": {
+        "ListeTontineAccepte": {
             "get": {
                 "tags": [
                     "Admins"
                 ],
                 "summary": "La liste de toutes les tontines acceptées",
                 "description": "Obtenir la liste de toutes les tontines acceptées.",
-                "operationId": "2646a926bac51303654450ef7a05898e",
+                "operationId": "37ba105f1b1d733c68a4319145633dc9",
                 "responses": {
                     "200": {
                         "description": "Liste de toutes les tontines acceptées récupérée avec succès",
@@ -351,12 +341,7 @@
                     "500": {
                         "description": "Erreur interne du serveur"
                     }
-                },
-                "security": [
-                    {
-                        "jwt_token": []
-                    }
-                ]
+                }
             }
         },
         "admin/ListeTontineEnAttente": {
